Quase concluído faltando detalhes

--- a/style.css
+++ b/style.css
@@ -1,48 +1,57 @@
+* {
+    margin: 0;
+    padding: 0;
 
+}
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
 body {
 
-    font-family: "inter" sans-serif;
-    margin: 0;
-    padding: 0;
-    
+    font-family: "inter" sans-serif;    
+    background:black
     
     
    
 }
 
 .page {
-    margin: 0 auto 0;
     width: 1440px;
-    height: 3974px;
-    background-color: black;
-     
+    height: 3874px;
+    top: -267px;
+    left: -721px;   
     
     
 }
 
-nav {
+.nav {
     display: flex;
-    align-items: center;
-    justify-content: space-between; 
-    margin-bottom: 52px ;   
+    justify-content: space-between;
+    gap: 20px;
+    margin-left: 64px;
+    margin-top: 49px;
+    width: 1312px;
+    height: 19px;
+
+   
+    
     
 }
 
-h1 {  
-      display: flex;    
+.workout{
+      width: 85px;
+      height: 19px;
+            
       color: #FAFAFA;
       font-size: 16px;
       font-style: normal;
       font-weight: 700;
       line-height: normal;
-      margin-left: 64px;
+      
      
      
 }
-a {
+ a {
     text-decoration: none;
     color: #FAFAFA;
     gap: 20px;
@@ -56,8 +65,7 @@ ul,li {
        
 
 }
-
-li {    
+ li {    
     list-style: none;
     font-size: 12px;
     font-style: normal;
@@ -68,29 +76,32 @@ li {
 
 
 .corpo {
+
     width: 1255px;
     height: 741px;
-    margin: 0 auto 0;
-    padding-top: 240px;
-    display: flex;
-    
+    margin-top: 248px;
+    margin-left: 141px;    
   
 }
 
-h2 {    
+.workoutme {    
     font-family: "Open Sans", sans-serif;
     color: #FAFAFA;
-    font-size: 162px;
+    font-size: 172px;
     font-style: normal;
     font-weight: 800;
     line-height: 170px; /* 98.837% */
     letter-spacing: -2px;
     text-transform: uppercase;
     margin-block-start: 2%;
+    width: 883px;
+    height: 340px;
+    top: 248px;
+    left: 141px;
     
 }
 
-p {
+.ahuge {
     color: var(--Text-2, rgba(239, 237, 232, 0.65));
     /* body-text */
     font-family: "inter", sans-serif;
@@ -100,6 +111,10 @@ p {
     line-height: 24px; /* 150% */
     letter-spacing: 0.5px;
     padding-top: 46px;
+    width: 560px;
+    height: 48px;
+    top: 732px;
+    left: 141px;
 }
 
 button {
@@ -111,22 +126,502 @@ button {
     border-radius: 10px;
     background: #E6533C;
     color: #FFF;
-    font-family: Poppins;
+    font-family: "Poppins";
     font-size: 18px;
     font-style: normal;
     font-weight: 600;
     line-height: 22px; /* 122.222% */
     letter-spacing: 1px;
-}
+    margin-top: 50px;
+ }
+    
 
 img {
+  position: absolute;
+  width: 409px;
+  height: 684px;
+  top: 400px;
+  left: 960px;
+  
+
+
+}
+
+.featured {
+    width: 127px;
+    height: 22px;
+    color: var(--Text-2, rgba(239, 237, 232, 0.65));
+    font-family: "Inter";
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 22px; /* 157.143% */
+    margin-top: 136px;
+    
+   
+
+}
+
+.logos {
+    width: 599px;
+    height: 20px;
+    margin-top: 700px;
+    left: 141px;
+}
+
+.section2 {
+    color: #FAFAFA;
+    font-family: "inter";
+    Width:868px;
+    Height:98px;
+    margin-top: 500px;
+    Left:178px;
+}  
+
+.section2 > h2 {
+    Width:640px;
+   Height:50px;    
+   font-family: "inter";
+   font-weight: 600;
+   font-size: 40px;
+   line-height: 50px;
+   letter-spacing: 0.3px;
+   font-style: normal;
+}
+
+.programs {
+color: var(--Text-2, rgba(239, 237, 232, 0.65));
+/* body-text */
+font-family: "Inter";
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 24px; /* 150% */
+letter-spacing: 0.5px;
+margin-top: 24px;
+
+}
+
+
+.retangulo *{
+    box-sizing: border-box;   
+    }
+.retangulo1{
+    background: #323443;
+    border-radius: 12px;
+    width: 304px;
+    height: 190px;
+    position: relative;
+    }
+
+.retangulo2 {
+
+    background: #232532;
+    border-radius: 12px;
+    width: 304px;
+    height: 190px;
+    position: relative;
+  }
+
+  .retangulo3 {
+  background: #323443;
+  border-radius: 12px;
+  width: 304px;
+  height: 190px;
+  position: relative;
+
+  }
+
+  .retangulo4 {
+    background: #4f5261;
+    border-radius: 12px;
+    width: 304px;
+    height: 190px;
+    position: relative;
+  }
+
+  .retangulos{
+  display: flex;
+  flex-direction: row;
+  gap: 32px;
+  justify-content: space-between;
+  align-content: center;
+  margin-top: 50px;
+ 
+
+
+}
+
+.retangulos ,h2 {
+    display: flex;
+    font-family: "inter";
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px;
+    letter-spacing: 0.5px;
+    
+}
+
+.retangulos p {
+    color: var(--Text-2, rgba(239, 237, 232, 0.65));
+    font-family: "inter";
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+
+}
+
+.section3 {
+    width: 1312px;
+    height: 1170px;
+    flex-shrink: 0;
+    margin-top: 600px;
+    position: relative;
+    overflow: hidden;
+    }
+    
+    .conteiner {
+    
+    
+    
+    }
+    .conteiner h2 {
+    color: var(--Text-1, #FAFAF9);
+    font-family: "Inter";
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 50px; 
+    letter-spacing: 0.3px;
+    }
+    
+    .conteiner p {
+    
+        display: flex;
+        align-items: flex-start;
+        justify-content: flex-start;
+        position: relative;
+        width: 480px;
+        height: 120px;
+        margin: 38px 0 0 3px;
+        color: rgba(239, 237, 232, 0.65);
+        font-family:"Inter";
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 24px;
+        text-align: left;
+        letter-spacing: 0.3px;
+    }
+    
+    .meditando {
+    
+    position: absolute;
+    width: 640px;
+    height: 539px;
+    top: 0;
+    left: 595px;  
+    }
+
+    .section4 {
+    margin-top: 700px;   
+    position: relative;
+    width: 1240px;
+    height: 510px;
+    margin: 0 auto;
+    }
+
+.exercitando {
+
+position: absolute;
+width: 560px;
+height: 510px;
+top: 0;
+left: 0;
+background-size: cover;
+z-index: 2;
+
+}
+
+.conteiner1 {
+    position: absolute;
+    width: 591px;
+    height: 415px;
+    top: 55px;
+    left: 649px;
+    font-size: 0px;
+    z-index: 5;
+
+}
+
+.texto1 { 
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    position: relative;
+    width: 591px;
+    height: 210px;
+    margin: 0 0 0 0;
+    color: #fafaf9;
+    font-family: "Inter";
+    font-size: 50px;
+    font-weight: 600;
+    line-height: 70px;
+    text-align: left;
+    letter-spacing: 0.83px;}
+
+.texto2 {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    position: relative;
+    width: 523px;
+    height: 120px;
+    margin: 38px 0 0 0;
+    color: rgba(239, 237, 232, 0.65);
+    font-family: "Inter";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    letter-spacing: 0.3px;
+    z-index: 1;
+}
+
+.section5{
+    overflow: hidden;
+    top: 200px;
+    }    
+    .section5 * {
+    box-sizing: border-box;
+    }
+   
+    .section5 {
+   
+    position: relative;
+    width: 1155px;
+    height: 787px;
+    margin: 0 auto;
+    font-size: 0px;
+    }
+    .texto3 {
+    display: block;
+    position: relative;
+    height: 70px;
+    margin: 0 0 0 0;
+    color: #fafaf9;
+    font-family: "inter";
+    font-size: 50px;
+    font-weight: 500;
+    line-height: 70px;
+    text-align: left;
+    white-space: nowrap;
+    letter-spacing: 0.83px;
+    }
+    .linha {
+    position: relative;
+    width: 1152px;
+    height: 2px;
+    margin: 12px 0 0 3px;
+    background: url(./arquivos/linha.png)
+    no-repeat center;
+    background-size: 100% 100%;
+    z-index: 1;
+    }
+    .caixa {
     display: flex;
     align-items: center;
-    justify-content: flex-end;
-    margin-inline: % 10%;
-    writing-mode: horizontal-tb;
-    direction: rtl;
-}
+    justify-content: space-between;
+    position: relative;
+    width: 1145px;
+    height: 640px;
+    margin: 32px 0 0 6px;
+    z-index: 11;
+    }
+    .conteudo {
+    flex-shrink: 0;
+    position: relative;
+    width: 538px;
+    height: 640px;
+    font-size: 0px;
+    background: #232532;
+    z-index: 3;
+    }
+    .texto4{
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    position: relative;
+    width: 402px;
+    height: 50px;
+    margin: 71px 0 0 68px;
+    color: #fafaf9;
+    font-family: "Inter";
+    font-size: 40px;
+    font-weight: 600;
+    line-height: 50px;
+    text-align: center;
+    white-space: nowrap;
+    letter-spacing: 0.3px;
+    z-index: 4;
+    }
+    .texto5 {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    position: relative;
+    width: 402px;
+    height: 96px;
+    margin: 34px 0 0 68px;
+    color: rgba(239, 237, 232, 0.65);
+    font-family: "Inter";
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    letter-spacing: 0.5px;
+    z-index: 5;
+    }
+    .texto6 {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    position: relative;
+    width: 402px;
+    height: 168px;
+    margin: 16px 0 0 68px;
+    color: rgba(239, 237, 232, 0.65);
+    font-family: Inter, var(--default-font-family);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    letter-spacing: 0.5px;
+    z-index: 6;
+    }
+    .texto7 {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    position: absolute;
+    height: 26px;
+    top: 537px;
+    left: 68px;
+    color: #0070c9;
+    font-family: "Inter";
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 26px;
+    text-align: left;
+    white-space: nowrap;
+    letter-spacing: 0.5px;
+    z-index: 8;
+    }
+    .img-2 {
+    position: absolute;
+    width: 24.217px;
+    height: 19.605px;
+    top: 543px;
+    left: 153px;
+    background: url(./arquivos/seta.svg)
+    no-repeat center;
+    background-size: cover;
+    z-index: 9;
+    }
+    .caixa2 {
+    flex-shrink: 0;
+    position: relative;
+    width: 538px;
+    height: 640px;
+    font-size: 0px;
+    background: #323443;
+    z-index: 11;
+    }
+    .texto8 {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    position: relative;
+    width: 402px;
+    height: 50px;
+    margin: 71px 0 0 68px;
+    color: #fafaf9;
+    font-family: "Inter";
+    font-size: 40px;
+    font-weight: 600;
+    line-height: 50px;
+    text-align: center;
+    white-space: nowrap;
+    letter-spacing: 0.3px;
+    z-index: 13;
+    }
+    .texto9 {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    position: relative;
+    width: 402px;
+    height: 96px;
+    margin: 34px 0 0 68px;
+    color: rgba(239, 237, 232, 0.65);
+    font-family: "Inter";
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    letter-spacing: 0.5px;
+    z-index: 15;
+    }
+    .texto10 {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    position: relative;
+    width: 402px;
+    height: 240px;
+    margin: 16px 0 0 68px;
+    color: rgba(239, 237, 232, 0.65);
+    font-family: "Inter";
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    text-overflow: initial;
+    letter-spacing: 0.5px;
+    z-index: 17;
+    overflow: hidden;
+    }
+    .box {
+    position: relative;
+    width: 150px;
+    height: 30px;
+    margin: 28px 0 0 68px;
+    background: #0070c9;
+    z-index: 18;
+    border-radius: 10px;
+    }
+    .texto11 {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    position: absolute;
+    height: 22px;
+    top: 4px;
+    left: 14px;
+    color: #fafaf9;
+    font-family: "Poppins", ;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 22px;
+    text-align: left;
+    white-space: nowrap;
+    z-index: 19;
+    }
+
+
+
 
 
 
